long click finish commit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,7 +64,8 @@
         <activity android:name=".RgisterActivity" />
         <activity android:name=".LoanPayments" />
         <activity android:name=".Addloan" />
-        <activity android:name=".MyTransactions"></activity>
+        <activity android:name=".MyTransactions" />
+        <activity android:name=".Customer_Info"></activity>
     </application>
 
 </manifest>
