--- a/android-volley-master/build.gradle
+++ b/android-volley-master/build.gradle
@@ -40,11 +40,11 @@ allprojects {
 }
 
 dependencies {
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.0'
-    androidTestCompile 'com.android.support.test:testing-support-lib:0.1'
-    testCompile 'junit:junit:4.12'
-    testCompile "org.mockito:mockito-core:1.9.5"
-    testCompile 'org.robolectric:robolectric:2.4'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.0'
+    androidTestImplementation 'com.android.support.test:testing-support-lib:0.1'
+    testImplementation 'junit:junit:4.12'
+    testImplementation "org.mockito:mockito-core:1.9.5"
+    testImplementation 'org.robolectric:robolectric:2.4'
 }
 
 
