--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     implementation project(':android-volley-master')
-    compile 'com.journeyapps:zxing-android-embedded:3.4.0'
+    implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation files('src/main/lib/RT_Android_Bluetooth_SDK_20150204.jar')
 }
